# climate_change_twitter

./: README.md  app_exp.py  pyproject.toml
main/: API.py  __main__.py
main/analysis/: EDA.ipynb  EDA.py  analysis.ipynb  analysis.py  common_words.py  incidents_years.py  word_clouds.py
main/cleaning/: data_clean.py  tweet_hydration_and_cleaning.py  tweets_extraction.sh
main/cloud/: word_cloud_generator.py  word_cloud_testing.ipynb
main/images/: common_words.py  word_cloud_generator.py  word_cloud_testing.ipynb  word_clouds.py
main/sources/: US_twitter_analysis_county.csv  average_sentiments_data.csv  data_clean.py  merged_date_county.csv  test.json  test.txt  test3.json  tweet_hydration_and_analysis.py  tweet_hydration_and_cleaning.py  tweet_ids_random.txt  tweets_extraction.sh  tweets_hydrated.json  tweets_hydrated.jsonl  twitter_year_county.csv  twitter_year_state.csv
main/sources/believer/__MACOSX/: ._believer_twitter.csv
main/src/: app.py  app_exp.py  app_experiment.py  box_plot.py  data4dash.py  filter_sentiment.py  stance_define.py  utils.py
main/src/assets/: dash_fonts.css  fonts.css
