[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
dash = "^2.8.1"
dash-bootstrap-components = "^1.4.0"
pyarrow = "^11.0.0"
jupyter = "^1.0.0"
wordcloud = "^1.8.2.2"
us = "^2.0.2"
geopandas = "^0.12.2"
shapely = "^2.0.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
